<resources>
    <string name="app_name">Shiori</string>
    <string name="bookmark_edit_comment_label">Comment</string>
    <string name="bookmark_edit_fragment_name">Bookmark Edit</string>
    <string name="bookmark_edit_tag_label">Tag List</string>
    <string name="bookmark_edit_tag_list_check_label">Select tag</string>
    <string name="bookmark_edit_url_label">URL</string>
    <string name="bookmark_list_create_label">Create bookmark</string>
    <string name="bookmark_list_empty_label">No bookmarks</string>
    <string name="bookmark_list_fragment_name">Bookmark List</string>
    <string name="bookmark_list_item_more">more</string>
    <string name="common_edit_cancel_label">Cancel</string>
    <string name="common_edit_id_label">Id</string>
    <string name="common_edit_name_label">Name</string>
    <string name="common_edit_ok_label">OK</string>
    <string name="license_fragment_name">License</string>
    <string name="main_toolbar_search_label">Search</string>
    <string name="menu_bookmark_popup_delete_label">Delete</string>
    <string name="menu_bookmark_popup_edit_label">Edit</string>
    <string name="menu_bookmark_popup_open_label">Open</string>
    <string name="menu_bookmark_popup_share_label">Share</string>
    <string name="menu_tag_popup_delete_label">Delete</string>
    <string name="menu_tag_popup_edit_label">Edit</string>
    <string name="menu_tag_popup_open_label">Open</string>
    <string name="setting_app_version_label">App Version</string>
    <string name="setting_bookmark_count_label">Bookmark Count</string>
    <string name="setting_database_version_label">Database Version</string>
    <string name="setting_delete_all_label">Delete All</string>
    <string name="setting_tag_count_label">Tag Count</string>
    <string name="setting_fragment_name">Settings</string>
    <string name="tag_edit_fragment_name">Tag Edit</string>
    <string name="tag_list_create_label">Create tag</string>
    <string name="tag_list_empty_label">No tags</string>
    <string name="tag_list_fragment_name">Tag List</string>
    <string name="tag_list_item_more">more</string>
</resources>
