<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="net.bouzuya.sample5.BookmarkListFragment"
        android:label="@string/home_fragment_name">
        <action
            android:id="@+id/action_home_fragment_to_bookmark_edit_fragment"
            app:destination="@id/bookmark_edit_fragment" />
    </fragment>

    <dialog
        android:id="@+id/bookmark_edit_fragment"
        android:name="net.bouzuya.sample5.BookmarkEditFragment"
        android:label="@string/bookmark_edit_fragment_name">
        <argument
            android:name="bookmarkId"
            app:argType="long" />
    </dialog>

    <fragment
        android:id="@+id/tag_list_fragment"
        android:name="net.bouzuya.sample5.TagListFragment"
        android:label="@string/tag_list_fragment_name">
        <action
            android:id="@+id/action_tag_list_fragment_to_tag_edit_fragment"
            app:destination="@id/tag_edit_fragment" />
    </fragment>

    <dialog
        android:id="@+id/tag_edit_fragment"
        android:name="net.bouzuya.sample5.TagEditFragment"
        android:label="@string/tag_edit_fragment_name">
        <argument
            android:name="tagId"
            app:argType="long" />
    </dialog>
</navigation>
