<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="net.bouzuya.shiori.TagEditViewModel" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="300dp"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".TagEditFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/tagEditNameEdit"
            android:text="@string/common_edit_name_label" />

        <EditText
            android:id="@+id/tagEditNameEdit"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="start|center_vertical"
            android:inputType="text"
            android:padding="12dp"
            android:text="@={viewModel.nameText}"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.cancel()}"
                android:text="@string/common_edit_cancel_label" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.ok()}"
                android:text="@string/common_edit_ok_label" />
        </LinearLayout>
    </LinearLayout>
</layout>
